# taxi_demand_predictor

./: lightgbm-4.3.0-py3-none-macosx_10_15_x86_64.macosx_11_6_x86_64.macosx_12_5_x86_64.whl  package-lock.json  pyproject.toml
.github/workflows/: feature_pipeline.yaml
data/raw/transformed/: ts_data_2023_05.parquet  validated_rides_2023_05.parquet  validated_rides_2023_11.parquet
models/: model.pkl
notebooks/: 01_load_and_validate_raw_data.ipynb  03_transform_ts_data_into_features_and_targets.ipynb  04_transformed_row_data_into_features_and_targets.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  07_xgboost_model.ipynb  08_lightgbm_model.ipynb  09_lightgbm_model_with_feature_engineering.ipynb  10_lightgbm_model_with_hyperparameter_tuning.ipynb  11_backfill_feature_store.ipynb  12_feature_pipeline.ipynb  13_model_training_pipeline.ipynb  14_inference_pipeline.ipynb
src/: config.py  data.py  frontend.py  inference.py
venv_arm64/: pyvenv.cfg
venv_new/: pyvenv.cfg
